# tl-test-actix

./: .env.example  .gitignore  Cargo.toml  Procfile  heroku.yml
.circleci/: config.yml
assets/css/: index.css
assets/js/: index.js
jelly/src/: server.rs
migrations/: 20220310035902_packages.sql
migrations/2022-09-12-185044_items/: up.sql
migrations/20220310035902_packages/: up.sql
src/: assets.rs  lib.rs  schema.rs
src/accounts/: models.rs
src/accounts/jobs/: odd_registration_attempt.rs  reset_password.rs  verify.rs  welcome.rs
src/accounts/views/: login.rs  register.rs  reset_password.rs  utils.rs  verify.rs
src/items/: forms.rs  mod.rs  models.rs
src/items/views/: create.rs  list.rs  mod.rs  utils.rs  verify.rs
templates/: layout.html
templates/items/: list.html
tests/features/items/: create_item.feature  list_item.feature
tests/features/step_definitions/: items__list_items.rs  items_create_item.rs  mod.rs
