[package]
name = "tl-test-actix"
version = "0.1.0"
authors = ["Put yaself here etc"]
edition = "2021"

[lib]
name = "mainlib"
path = "src/lib.rs"

[[bin]]
name = "webserver"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
base64-url = "1.4.8"
jelly = { path = "jelly" }
log = "*"
serde = { version = "1" }
actix-files = "0.5.0"

[features]
default = ["jelly/template_watcher", "jelly/static"]
production = ["jelly/production"]
[dev-dependencies]
anyhow = "1.0.42"
dotenv = "0.15.0"
env_logger = "0.9.0"
lazy_static = "1.4.0"
test-log = "0.2.8"
